# QuickNews

./: Cargo.toml  LICENSE  README.md
newsapi/: Cargo.toml
newsapi/src/: lib.rs
quick_news_app/: Cargo.toml
quick_news_app/src/: main.rs  quicknews.rs
