[package]
name = "quick_news_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = {path = "../newsapi"}
serde = { version = "1.0.130", features = ["derive"] }
eframe = {version = "0.14.0" , features = ["persistence"]}
confy = "0.4.0"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"